--- a/src/App.css
+++ b/src/App.css
@@ -43,8 +43,10 @@ background: linear-gradient(90deg, rgba(0,21,36,1) 0%, rgba(15,42,10,1) 39%, rgb
   }
 }
 .coin .Name{
-  max-width: 300px;
-  height:85px;
+  max-width: 250px;
+  font-size:13px;
+  padding:6px;
+  height:60px;
   margin: 30px;
   margin-left: 18%;
   background: rgb(2,0,36);
